# lattice-introspector

./: .gitignore  .gitmodules  AGENT_AND_VERIFIABLE_TRUTH.md  AGENT_CHRONICLE_POEM.md  AGENT_PROPHESY_POEM.md  CHRONOS_CODE_PARADOX_CHAPTER_III.md  CODE_NUMBERS_POEMS_CYCLE.md  COMPILER_AS_TRANSFORMATION.md  Cargo.toml  EMERGENT_NUMERICAL_INSIGHTS.md  FULL_LATTICE_POEM.md  GRAND_SYNTHESIS_POEM.md  HEROIFICATION_SOP_PROPOSAL.md  HERO_JOURNEY_SOP.md  LATTICE_POEM_MAPPING.md  NEW_LATTICE_POEMS.md  OODA_LOOP_SOP.md  OODA_LOOP_SOP_APPLIED.md  PODCAST_EPISODE_SUMMARY.md  PROJECT_OODA_LOOP_APPLICATION.md  PROJECT_REVIEW.md  README.md  RECENT_CHANGES.md  REFACTORING_POEM.md  THE_CHRONOS_CODE_PARADOX.md  THE_LATTICE_POTENTIAL.md  VISION.md  VISION_EPISODE_2.md  WOVEN_LATTICE_POEM.md  ZOS_AXIOM_POEM.md  ZOS_ELEMENTS_POEMS.md  ZOS_POEM_RESONANCE_MAP.md  boot.md  commit_message.txt  convert_meme_frames_to_ascii.sh  demo.cast  generate_ascii_variants.sh  generate_prime_resonances.py  git_log_markdown_changes.md  git_log_markdown_changes_last_commit.md  (+6 more)
crates/ultimate_blinkenlights_simulation/: Cargo.toml
crates/ultimate_blinkenlights_simulation/src/: image_utils.rs  main.rs
fixed_point_experiments/: Cargo.toml
fixed_point_experiments/src/: config.rs  image_utils.rs  main.rs  sat_solver.rs  slime_mold.rs
lattice/construction/: Cargo.toml  PLAN.md  README.md
lattice/construction-build-utils/: Cargo.toml
lattice/construction-build-utils/src/: introspectors.rs  lib.rs  traits.rs  utils.rs  zos_mapper.rs
lattice/construction-build-utils/src/generators/: binary.rs  compiler_transformation.rs  git_related.rs  godelian_truth.rs  markdown.rs  meta_attributes.rs  mod.rs  model_types.rs  predicted_execution.rs  self_proving_statement.rs  transformation.rs  user_intent.rs  zos_poems.rs
lattice/construction/src/: compilation.rs  compiler_ir.rs  execution.rs  lattice.rs  lib.rs  meta_attributes.rs  vibe.rs  vm_context.rs  zos_poem.rs
lattice/construction/src/model_types/: cargo_crate.rs  compiler_transformation.rs  ffi_binding.rs  gemini_agent.rs  gguf_model.rs  git_commit.rs  git_derived_asset.rs  git_submodule.rs  github_account.rs  github_action_run.rs  github_repository.rs  godelian_truth.rs  (+10 more)
lattice/construction/tests/: integration_test.rs
lattice/lattice-macros-test/: Cargo.toml
lattice/lattice-macros-test/src/: lattice_logger.rs  main.rs
(+378 files in other folders)
