[package]
name = "fixed_point_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
# For `Instant` and `Duration`
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
rand = "0.8" # For potential future random number generation in slime mold
image = { version = "0.25", features = ["gif"] }
gif = "0.13"
solfunmeme-banner = { path = "../../vendored/solfunmeme-banner" }
