[package]
name = "ultimate_blinkenlights_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
chrono = "0.4"
serde_json = "1.0"
once_cell = "1.19.0"
rand = "0.8"