[package]
name = "construction-build-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
lattice-types = { path = "../lattice-types" }
lattice-introspector = { path = "../lattice-introspector" }
once_cell = "1.19.0"
chrono = "0.4"
