[package]
name = "construction"
version = "0.1.0"
edition = "2024"

[dependencies]
lattice-types = { path = "../lattice-types" }
lattice-macros = { path = "../lattice-macros" }
once_cell = "1.19.0"
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies] # Add build dependencies
walkdir = "2.3"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
lattice-types = { path = "../lattice-types" }
lattice-introspector = { path = "../lattice-introspector" }
construction-build-utils = { path = "../construction-build-utils" }
chrono = "0.4"
