[package]
name = "lattice-macros-test"
version = "0.1.0"
edition = "2024"

[dependencies]
lattice-macros = { path = "../lattice-macros" }
lattice-types = { path = "../lattice-types" }
once_cell = "1.19.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
uuid = { version = "1.8", features = ["v4", "serde"] }
